@@ -1,6 +1,7 @@
 plugins {
-    id 'org.springframework.boot' version '3.2.4'
-    id 'io.spring.dependency-management' version '1.1.4'
+    id 'nowplaying.java-conventions'
+    id 'org.springframework.boot'
+    id 'io.spring.dependency-management'
     id 'java-library'
 }
 
@@ -10,6 +11,3 @@ dependencies {
 //    implementation("org.springframework:spring-context")
 }
 
-compileJava {
-    options.compilerArgs += ['--enable-preview']
-}
